# try-onnxruntime

./: .gitignore  README.md  pyproject.toml
src/: inference.py
