[tool.poetry]
name = "try-onnxruntime"
version = "0.1.0"
description = ""
authors = ["akitanak <akihito_tanaka@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
onnxruntime = "^1.7.0"
pillow = "^8.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
